# enxitry

./: README.md  pyproject.toml  rxconfig.py
src/enxitry/: config.py  enxitry.py  slack.py
src/enxitry/card/: __init__.py  nfc.py  ocr.py
src/enxitry/models/: __init__.py  gspread.py  log.py  student.py
src/enxitry/pages/: __init__.py  students.py
