[project]
name = "enxitry"
version = "0.1.0"
description = "Room Entry/Exit Management System"
authors = [{ name = "0xNOY", email = "noy@abc-net.jp" }]
dependencies = [
    "reflex>=0.5.1",
    "paddleocr-onnx @ git+https://github.com/0xNOY/paddleocr-onnx.git",
    "pandas>=2.2.2",
    "opencv-python>=4.9.0.80",
    "pyscard>=2.0.9",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "gspread-pandas>=3.3.0",
    "cuid2>=2.0.1",
    "pillow>=10.3.0",
    "pytz>=2024.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.4.5"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/enxitry"]
